// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActiveGraph renders correctly 1`] = `
<div
  className="graph red"
  id="Active"
>
  <h3
    className="title-graph"
  >
    Daily Active Cases
  </h3>
</div>
`;

exports[`CountryList renders correctly 1`] = `
<div
  className="autocomplete"
>
  <input
    onChange={[Function]}
    placeholder="Enter a country..."
    type="text"
    value=""
  />
</div>
`;

exports[`DeathGraph renders correctly 1`] = `
<div
  className="graph darkgreen"
  id="Deaths"
>
  <h3
    className="title-graph"
  >
    Daily Death Cases
  </h3>
</div>
`;

exports[`NewCasesGraph renders correctly 1`] = `
<div
  className="graph orange"
  id="New"
>
  <h3
    className="title-graph"
  >
    Daily New Cases
  </h3>
</div>
`;

exports[`RecoveredGraph renders correctly 1`] = `
<div
  className="graph green"
  id="Recovered"
>
  <h3
    className="title-graph"
  >
    Daily Recovered Cases
  </h3>
</div>
`;

exports[`SideNavBar renders correctly 1`] = `
<nav>
  <img
    alt=""
    className="menu"
    id="menu"
    onClick={[Function]}
    src="bars.png"
  />
  <div
    className="navbar"
    id="navbar"
  >
    <p
      id="close"
      onClick={[Function]}
    >
      X
    </p>
    <h2>
      Coronavirus Stats
    </h2>
    <ul>
      <a
        href="/"
        onClick={[Function]}
        style={
          Object {
            "color": "black",
            "textDecoration": "none",
          }
        }
      >
        <li>
          World
        </li>
      </a>
      <a
        href="/Country"
        onClick={[Function]}
        style={
          Object {
            "color": "black",
            "textDecoration": "none",
          }
        }
      >
        <li>
          Lookup by Country
        </li>
      </a>
    </ul>
    <div
      className="footer"
    >
      <p>
        Made with 
        <a
          href="https://covid19api.com/"
        >
          COVID19 API
        </a>
         and 
        <a
          href="https://www.chartjs.org/"
        >
          ChartJs
        </a>
      </p>
    </div>
  </div>
</nav>
`;

exports[`Tab renders correctly 1`] = `
<div
  className="tab"
>
  <ul>
    <a
      className="tabitem"
      id="alltab"
      onClick={[Function]}
    >
      All
    </a>
    <a
      className="tabitem"
      onClick={[Function]}
    >
      New
    </a>
    <a
      className="tabitem"
      onClick={[Function]}
    >
      Active
    </a>
    <a
      className="tabitem"
      onClick={[Function]}
    >
      Recovered
    </a>
    <a
      className="tabitem"
      id="deathtab"
      onClick={[Function]}
    >
      Deaths
    </a>
  </ul>
</div>
`;

exports[`TotalActiveCard renders correctly 1`] = `
<div
  className="card red"
>
  <img
    alt=""
    className="icon"
    src="Active.png"
  />
  <div
    className="title"
  >
    Total Active
  </div>
  <span
    className="count"
    style={
      Object {
        "color": "red",
      }
    }
  >
    0
  </span>
  <div
    className="newcount"
  >
    0
     New Active
  </div>
</div>
`;

exports[`TotalConfirmedCard renders correctly 1`] = `
<div
  className="card orange"
>
  <img
    alt=""
    className="icon"
    src="virus.png"
  />
  <div
    className="title"
  >
    Total Confirmed
  </div>
  <span
    className="count"
    style={
      Object {
        "color": "rgba(255,128,0)",
      }
    }
  >
    1
  </span>
  <div
    className="newcount"
  >
    0
     New Cases
  </div>
</div>
`;

exports[`TotalDeathsCard renders correctly 1`] = `
<div
  className="card darkgreen"
>
  <img
    alt=""
    className="icon"
    src="rip.png"
  />
  <div
    className="title"
  >
    Total Deaths
  </div>
  <span
    className="count"
    style={
      Object {
        "color": "#085f63",
      }
    }
  >
    0
  </span>
  <div
    className="newcount"
  >
    0
     New Deaths
  </div>
</div>
`;

exports[`TotalRecoveredCard renders correctly 1`] = `
<div
  className="card green"
>
  <img
    alt=""
    className="icon"
    src="recovered.png"
  />
  <div
    className="title"
  >
    Total Recovered
  </div>
  <span
    className="count"
    style={
      Object {
        "color": "rgba(0,204,0)",
      }
    }
  >
    0
  </span>
  <div
    className="newcount"
  >
    0
     New Recovered
  </div>
</div>
`;

exports[`World renders correctly 1`] = `
<div
  className="world"
>
  <div
    className="header"
  >
    <h1>
      World Statistics
    </h1>
  </div>
  <div
    className="world-card-row"
  >
    <div
      className="card orange"
    >
      <img
        alt=""
        className="icon"
        src="virus.png"
      />
      <div
        className="title"
      >
        Total Confirmed
      </div>
      <span
        className="count"
        style={
          Object {
            "color": "rgba(255,128,0)",
          }
        }
      >
        
      </span>
      <div
        className="newcount"
      >
        
         New Cases
      </div>
    </div>
    <div
      className="card green"
    >
      <img
        alt=""
        className="icon"
        src="recovered.png"
      />
      <div
        className="title"
      >
        Total Recovered
      </div>
      <span
        className="count"
        style={
          Object {
            "color": "rgba(0,204,0)",
          }
        }
      >
        
      </span>
      <div
        className="newcount"
      >
        
         New Recovered
      </div>
    </div>
    <div
      className="card darkgreen"
    >
      <img
        alt=""
        className="icon"
        src="rip.png"
      />
      <div
        className="title"
      >
        Total Deaths
      </div>
      <span
        className="count"
        style={
          Object {
            "color": "#085f63",
          }
        }
      >
        undefined
      </span>
      <div
        className="newcount"
      >
        undefined
         New Deaths
      </div>
    </div>
  </div>
</div>
`;
